# py-cli

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
projects/command/: pyproject.toml
projects/command/src/command/: __init__.py
projects/frontend/: README.md  pyproject.toml
src/py_cli/: __init__.py
src/py_cli/sub/: __init__.py
