[project]
name = "py-cli"
version = "0.1.0"
authors = [
  { name = "Hayato Mizushima", email = "hayato.mizushima@tier4.jp" },
]
description = "python sample cli repository"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
py-cli = "py_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["projects/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_cli"]
